--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,9 +82,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: LuckiestGuy
+    - family: YesevaOne
       fonts:
-        - asset: assets/fonts/LuckiestGuy-Regular.ttf
+        - asset: assets/fonts/YesevaOne-Regular.ttf
           weight: 400
   #   - family: Trajan Pro
   #     fonts:
