--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   get_it: ^7.2.0
+  injectable: ^1.5.3
   provider: ^6.0.0
   flutter_bloc: ^8.0.1
   freezed_annotation:
@@ -45,6 +46,7 @@ dev_dependencies:
     sdk: flutter
   freezed: ^1.1.1
   build_runner:
+  injectable_generator:
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
